# formula1

./: .gitignore  README.md  calendar_data.json  config.py  display_calendar.py  f1_calendar_echarts.py  fetch_and_display.py  fetch_calendar.py  local_build_test.py  netlify.toml  packages.txt  plotly_display.py  pyproject.toml  requirements.txt  rich_display.py  run.bat  run.sh  run_console_display.bat  setup.py  setup_supabase.py  start.sh  streamlit_app.py  test_calendar.py
.streamlit/: config.toml
F1Paddock/: __init__.py
pages/: 1_Circuits.py
